--- a/WebApplication1/Views/Admin/Index.cshtml
+++ b/WebApplication1/Views/Admin/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Admin Dashboard";
-    Layout = "_LayoutAdmin"; // You should create an admin layout
+    Layout = "LayoutAdmin"; // You should create an admin layout
 }
 
 <div class="container mt-4">
