--- a/WebApplication1/Views/Admin/User.cshtml
+++ b/WebApplication1/Views/Admin/User.cshtml
@@ -1,4 +1,5 @@
-﻿@model HealthManagmentSystem.Models.AdminUsersViewModel
+﻿@using HealthManagmentSystem.Models.ViewModel
+@model AdminUsersViewModel
 @{
     ViewData["Title"] = "Manage Users";
     Layout = "_LayoutAdmin";
