--- a/WebApplication1/Views/Home/Registration.cshtml
+++ b/WebApplication1/Views/Home/Registration.cshtml
@@ -38,6 +38,8 @@
         <button type="submit" class="btn btn-primary">Register</button>
         <a asp-action="Index" class="btn btn-secondary">Cancel</a>
     </form>
+    <h5> Already Registerd?</h5>
+    <a asp-action="Login" class="btn btn-secondary">Log In</a>
 </div>
 
 @section Scripts {
