--- a/WebApplication1/Views/Manager/Index.cshtml
+++ b/WebApplication1/Views/Manager/Index.cshtml
@@ -9,22 +9,22 @@
 
         <div class="col-md-4">
             <div class="card text-white bg-success mb-3">
-                <div class="card-header">Doctors</div>
+                <div class="card-header">Manage Doctor and Patient</div>
                 <div class="card-body">
-                    <h5 class="card-title">Doctor Management</h5>
-                    <p class="card-text">@ViewBag.DoctorCount doctors registered</p>
-                    <a asp-action="Doctors" class="btn btn-light">Manage Doctors</a>
+                    
+                  
+                    <a asp-action="Users" class="btn btn-light">Manage Users</a>
                 </div>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="card text-white bg-warning mb-3">
-                <div class="card-header">Patients</div>
+                <div class="card-header"> Appointments</div>
                 <div class="card-body">
-                    <h5 class="card-title">Patient Management</h5>
-                    <p class="card-text">@ViewBag.PatientCount patients registered</p>
-                    <a asp-action="Patients" class="btn btn-light">Manage Patients</a>
+   
+                   
+                    <a asp-action="Appointment" class="btn btn-light">Manage Appointments</a>
                 </div>
             </div>
         </div>
