--- a/WebApplication1/Views/Shared/LayoutAdmin.cshtml
+++ b/WebApplication1/Views/Shared/LayoutAdmin.cshtml
@@ -19,7 +19,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Admin" asp-action="Dashboard">Dashboard</a>
+                            <a class="nav-link" asp-controller="Admin" asp-action="Index">Dashboard</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Admin" asp-action="Users">Manage Users</a>
