--- a/WebApplication1/Views/Shared/LayoutManager.cshtml
+++ b/WebApplication1/Views/Shared/LayoutManager.cshtml
@@ -14,8 +14,8 @@
         <a class="navbar-brand" href="#">Health Management</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" asp-controller="Manager" asp-action="Doctors">Doctors</a></li>
-                <li class="nav-item"><a class="nav-link" asp-controller="Manager" asp-action="Patients">Patients</a></li>
+                <li class="nav-item"><a class="nav-link" asp-controller="Manager" asp-action="Index">Dashbroad</a></li>
+               
                 <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Logout">Logout</a></li>
             </ul>
         </div>
@@ -24,5 +24,7 @@
     <div class="container mt-4">
         @RenderBody()
     </div>
+    @RenderSection("Scripts", required: false)
+
 </body>
 </html>
